hopefully fixed shit, realigned html and removed a lot of css, most likely need to strip down even more if this doesnt work

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -140,25 +140,9 @@ label {
   font-size: 3em;
 }
 
-#twitch-box {
-  width: auto;
-  height: auto;
-  padding-left: 1em;
-}
-#twitch-box:before {
-  content: 'Latest on Twitch';
-  position: absolute;
-  mix-blend-mode: initial;
-  float: left;
-  padding: 0.1em;
-  color: black;
-  font-size: 20px;
-  background-color: rgb(225, 225, 225, 0.74);
-}
 .youtube-box {
   width: auto;
   height: auto;
-  padding-right: 1em;
 }
 /* .youtube-box:before {
   content: 'Latest on Youtube';
@@ -172,9 +156,7 @@ label {
   background-color: rgb(225, 225, 225, 0.74);
 } */
 /* Footer Section */
-#socials {
-  font-size: 1.2em;
-}
+
 a.link-data:hover {
   color: rgb(222, 222, 222);
   background-color: limegreen;
